--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "angular": "^1.6.2",
-    "angular-ui-router": "ui-router#^0.4.2"
+    "angular-ui-router": "ui-router#^0.4.2",
+    "angular-cookies": "^1.6.2"
   }
 }
